--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Generate snake
         uses: Platane/snk@v3
         with:
-          github_user_name: Moch-iQBAAL   # Ganti USERNAME dengan username GitHub kamu
+          github_user_name: Moch-iQBAAL  
           outputs: dist/github-contribution-grid-snake.svg
 
       - name: Push hasil snake
