--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,24 +2,24 @@ name: Generate Snake
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Jalan tiap hari jam 00:00 UTC
-  workflow_dispatch:
+    - cron: "0 0 * * *"    
+  workflow_dispatch:    
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Ambil repo
-        uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-      - name: Generate snake
-        uses: Platane/snk@v3
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
-          github_user_name: Moch-iQBAAL  
+          github_user_name: Moch-iQBAAL
           outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push hasil snake
-        uses: crazy-max/ghaction-github-pages@v2.5.0
+      - name: Push Snake to output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
           target_branch: output
           build_dir: dist
